# amm-sdk

./: .gitignore  .prettierrc  Cargo.toml  package.json  rustfmt.toml  tsconfig.json
libraries/bn/: Cargo.toml
libraries/bn/src/: lib.rs  safe_math.rs
libraries/fixed-exp/: Cargo.toml
libraries/fixed-exp/src/: lib.rs
libraries/math/: Cargo.toml
libraries/math/src/: base_pool_math.rs  error.rs  fixed_math.rs  lib.rs  stable_math.rs  swap_fee_math.rs  weighted_math.rs
programs/stable-swap/: Cargo.toml
programs/stable-swap/src/: account_meta_for_swap.rs  amm.rs  contexts.rs  lib.rs  pda.rs  pool.rs
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs  pda.rs  vault.rs
programs/weighted-swap/: Cargo.toml
programs/weighted-swap/src/: account_meta_for_swap.rs  amm.rs  contexts.rs  lib.rs  pda.rs  pool.rs
scripts/: createALT.ts
