[workspace]
members = [
    "libraries/*",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.28"
anyhow = "1.0.86"
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", rev = "abfb1abbdf574c5406193a67fae1d34e9d706f46" }
rust_decimal = "1.26.1"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.1.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "79a575fb7af56d26deeda94fef8f55bde7a90df3", features = [
    "no-entrypoint",
] }
num-traits = "0.2"
thiserror = "1.0"
typenum = "1.17.0"
fixed = "1.27.0"
