[package]
name = "stabble-stable-swap"
version = "1.0.0"
edition = "2021"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = "*"
anyhow = "1.0.86"
rust_decimal = "1.26.1"
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", branch = "feat/stabble" }
spl-token = { version = "*", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "*", features = ["no-entrypoint"] }
bn = { path = "../../libraries/bn" }
math = { path = "../../libraries/math" }
stabble-vault = { path = "../vault" }
