[package]
name = "stabble-stable-swap"
version = "1.0.0"
edition = "2021"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
jupiter-amm = [
    "dep:anyhow",
    "dep:rust_decimal",
    "dep:jupiter-amm-interface",
    "dep:spl-token",
    "dep:spl-associated-token-account",
]

[dependencies]
anchor-lang = "*"
anyhow = { version = "1.0.86", optional = true }
rust_decimal = { version = "1.26.1", optional = true }
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", branch = "feat/stabble", optional = true }
spl-token = { version = "*", features = ["no-entrypoint"], optional = true }
spl-associated-token-account = { version = "*", features = ["no-entrypoint"], optional = true }
bn = { path = "../../libraries/bn" }
math = { path = "../../libraries/math" }
stabble-vault = { path = "../vault" }
