[package]
name = "stabble-stable-swap"
version = "1.0.0"
edition = "2021"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
jupiter-amm = [
    "dep:anyhow",
    "dep:rust_decimal",
    "dep:jupiter-amm-interface",
    "dep:spl-token",
    "dep:spl-associated-token-account",
]

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", branch = "feat/stabble", optional = true }
spl-token = { workspace = true, features = ["no-entrypoint"], optional = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"], optional = true }
bn = { path = "../../libraries/bn" }
math = { path = "../../libraries/math" }
stabble-vault = { path = "../vault" }
